# anki_terminal

./: .gitignore  README.md  anki_context.py  anki_inspector.py  anki_types.py  apkg_extractor.py  apkg_manager.py  arg_parser.py  changelog.py  collection_factories.py  collection_reader.py  config_manager.py  conftest.py  database_manager.py  database_reader.py  db_operations.py  main.py  operation_executor.py  operation_models.py  operations.py  pyproject.toml  read_operations.py  requirements-dev.txt  script_manager.py  template_manager.py  user_operation_parser.py  write_operations.py
anki_terminal/: anki_context.py  arg_parser.py  changelog.py  collection_factories.py  config_manager.py  database_manager.py  db_operations.py  main.py  operation_executor.py  operation_factory.py  script_manager.py  write_operations.py
ops/: anki_path.py  base.py  registry.py
populators/: __init__.py  base.py  concat_fields.py  copy_field.py  jap_llm.py
test_data/: anki21_schema.md  anki2_schema.md  collection.anki21  jap21.apkg  jap_21.apkg  raw_table_data_v2.json  raw_table_data_v21.json  sample_anki2.json  sample_anki2.txt  sample_anki21.json  sample_anki21.txt  schema_differences.md
tests/: conftest.py  test_api_integration.py  test_apkg_manager.py  test_arg_parser.py  test_collection_factories.py  test_collection_factory_v2.py  test_collection_factory_v21.py  test_config_manager.py  test_database_manager.py  test_db_manager_ops_v2.py  test_db_manager_ops_v21.py  test_db_manager_v2.py  test_db_manager_v21.py  test_db_operations.py  test_db_operations_v2.py  test_read_only.py  (+12 more)
(+116 files in other folders)
